welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: illegal start of simple expression
	while ()
               ^ColumnByColumn:16: error: ')' expected but '}' found.
}
^