welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
var c:Int=0
	do {
		for (x<-0 to  getMondeHauteur()-1)
		{
			for (y<-0 to getMondeHauteur()-1)
			{
				ecritMessage(c)
				setPos(x,y+1)
				c=c+1
			}
			setPos(x+1,0)
		}
	}
	while ()
	
}
